--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -18,10 +18,12 @@
   <script src="src/getElementsByClassName.js"></script>
   <script src="src/stringifyJSON.js"></script>
   <script src="src/parseJSON.js"></script>
+  <script src="src/webCrawler.js"></script>
   <script src="spec/getElementsByClassNameSpec.js"></script>
   <script src="spec/fixtures.js"></script>
   <script src="spec/stringifyJSONSpec.js"></script>
   <script src="spec/parseJSONSpec.js"></script>
+  <script src="spec/webCrawlerSpec.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
