Implements breadth first version of getElementsByClassName function

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,6 +16,8 @@
     });
   </script>
   <script src="src/getElementsByClassName.js"></script>
+  <script src="src/getElementsByClassNameBreadthFirst.js"></script>
+  <script src="src/getElementsByClassNameMovingNodes.js"></script>
   <script src="src/stringifyJSON.js"></script>
   <script src="src/parseJSON.js"></script>
   <script src="src/webCrawler.js"></script>
